--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.resurface</groupId>
     <artifactId>resurfaceio-transformer</artifactId>
-    <version>2.1.0</version>
+    <version>3.5.1</version>
     <name>resurfaceio-transformer</name>
     <description>Clean or enhance ndjson files</description>
     <url>https://github.com/resurfaceio/transformer</url>
@@ -54,17 +54,17 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>RELEASE</version>
+            <version>2.10</version>
         </dependency>
         <dependency>
             <groupId>io.resurface</groupId>
-            <artifactId>resurfaceio-logger-messages</artifactId>
-            <version>RELEASE</version>
+            <artifactId>resurfaceio-ndjson</artifactId>
+            <version>3.5.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>RELEASE</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
