--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>17</source>
+                    <target>17</target>
                     <optimize>true</optimize>
                     <debug>true</debug>
                 </configuration>
@@ -54,12 +54,12 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.10</version>
+            <version>2.10.1</version>
         </dependency>
         <dependency>
             <groupId>io.resurface</groupId>
             <artifactId>resurfaceio-ndjson</artifactId>
-            <version>3.5.1</version>
+            <version>3.5.3</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -122,16 +122,12 @@
 
     <repositories>
         <repository>
-            <id>resurfacelabs-internal</id>
-            <url>https://dl.cloudsmith.io/cm5xAYS2KeL9Y5qA/resurfacelabs/internal/maven/</url>
+            <id>resurfacelabs-public</id>
+            <url>https://dl.cloudsmith.io/public/resurfacelabs/public/maven/</url>
             <releases>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
             </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
         </repository>
     </repositories>
 
