Update CloudSmith slug

--- a/pom.xml
+++ b/pom.xml
@@ -69,32 +69,14 @@
         </dependency>
     </dependencies>
 
-    <developers>
-        <developer>
-            <id>RobDickinson</id>
-            <name>Rob Dickinson</name>
-            <url>https://github.com/RobDickinson</url>
-            <organization>resurface.io</organization>
-            <organizationUrl>https://resurface.io</organizationUrl>
-            <roles>
-                <role>architect</role>
-                <role>developer</role>
-            </roles>
-            <timezone>America/Denver</timezone>
-            <properties>
-                <picUrl>https://resurface.io/headshot_rob_128.jpg</picUrl>
-            </properties>
-        </developer>
-    </developers>
-
     <distributionManagement>
         <snapshotRepository>
             <id>cloudsmith</id>
-            <url>https://maven.cloudsmith.io/resurfacelabs/internal/</url>
+            <url>https://maven.cloudsmith.io/resurfaceio/internal/</url>
         </snapshotRepository>
         <repository>
             <id>cloudsmith</id>
-            <url>https://maven.cloudsmith.io/resurfacelabs/internal/</url>
+            <url>https://maven.cloudsmith.io/resurfaceio/internal/</url>
         </repository>
     </distributionManagement>
 
@@ -122,8 +104,8 @@
 
     <repositories>
         <repository>
-            <id>resurfacelabs-public</id>
-            <url>https://dl.cloudsmith.io/public/resurfacelabs/public/maven/</url>
+            <id>resurfaceio-public</id>
+            <url>https://dl.cloudsmith.io/public/resurfaceio/public/maven/</url>
             <releases>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
